# I-Hate-Linux-Shells

./: Cargo.toml  README.md  rustfmt.toml
src/: ansi.rs  defines.rs  main.rs  parsing.rs  splitting.rs
src/builtins/: cd.rs  exec.rs  exit.rs  mod.rs
