[package]
name = "ihlsh"
version = "0.0.1"
edition = "2021"
authors = ["Decator <deactor.c@proton.me>"]
description = "A shell for Unix-like systems"
readme = "README.md"
homepage = "https://github.com/El-Wumbus/I-Hate-Linux-Shells"
repository = "https://github.com/El-Wumbus/I-Hate-Linux-Shells"
license = "LGPLv3"
license-file = "LICENSE.md"

[[bin]]
name = "ihlsh"
path = "src/main.rs"

[dependencies]
users="*"
libc="*"
structopt = "0.3"